# cnc-foam-cutter

./: 04 Trussed Test.ipynb  05 New tail.ipynb  06 Motion Planning Questions.ipynb  07 Spitfire Wing.ipynb  08 Battery holder.ipynb  09 Pathfinding Challenge.ipynb  10 Side quest into triangulation.ipynb  11 Pathfinding Challenge.ipynb  13 Wing Profile.ipynb  14 Glider Wing Again.ipynb  15 Round Flap.ipynb  16 RS232 Power Supply.ipynb  16 Zippy.ipynb  planiform_wing.ipynb  pyproject.toml  readme.md  requirements.txt  spitfire_wing.ipynb  test.ipynb  wing.ipynb
airfoil/: _Decomposer.py  _WingSegment.py  __init__.py  _airfoil.py  _itertools.py  _naca4.py  _naca5.py  _naca_parse.py  airfoil.py  machine_setup.py  spitfire.py  util.py  wing.py
airfoil/airfoiltools/: __init__.py
airfoil/cnc/: __init__.py  _machine_setup.py  _serial.py  machine_setup.py
airfoil/examples/: spitfire.py
airfoil/naca/: __init__.py
airfoil/util/: array_helpers.py  functools.py  linestring_helpers.py  path_planning.py  pyvista_helpers.py  shapely_helpers.py
arduino-pwm-to-scpi-rs/: Cargo.toml  Ravedude.toml  readme.md
arduino-pwm-to-scpi-rs/.cargo/: config.toml
arduino-pwm-to-scpi-rs/src/: float_format.rs  main.rs  messaging.rs  pulse_meter.rs  queue.rs  ring_buffer.rs
arduino-pwm-to-scpi-rs/src/shared/: float_format.rs  lib.rs  mod.rs  ring_buffer.rs
arduino-pwm-to-scpi/arduino-pwm-to-scpi/: arduino-pwm-to-scpi.ino
fluidnc/: config.yaml
hardware/pwm-to-scpi-arduino-cpp/: arduino-pwm-to-scpi.ino
hardware/pwm-to-scpi-arduino-fritzing/: uggh.fzz
hardware/pwm-to-scpi-rs-arduino/src/: main.rs
hardware/xpro-v5-esp32-fluidnc/: config.yaml
notebooks/: 04 Trussed Test.ipynb  09 Decomposition Improvements.ipynb  10 Side quest into triangulation.ipynb  11 Pathfinding Challenge.ipynb  12 wavey.ipynb  14 Glider Wing Again.ipynb  16 Zippy.ipynb  17 Toolhead PWM.ipynb  18 Hole Cutter.ipynb  19 Tail Cut.ipynb
src/airfoil/: _Decomposer.py  _Wing.py  _WingSegment.py  __init__.py  _airfoil.py  _pydantic_helper_types.py  wing.py
src/airfoil/cnc/: __init__.py  _gcode_builder.py  _machine_setup.py  _serial.py  _state_helpers.py  cnc_machine_mesh.py  machine_setup.py
src/airfoil/naca/: _naca5.py  _naca_parse.py
src/airfoil/power_supply/: __init__.py
util/: airfoil.py  config.py  gatekept_itertools.py  path_planning.py  pyvista_helpers.py  pyvista_mock.py  serial.py  shapely_helpers.py
(+11 files in other folders)
