[package]
name = "arduino-pwm-to-scpi"
version = "0.1.0"
authors = ["thehappycheese"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

[dependencies.avr-device]
version = "0.7.0"
features =["atmega328p"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
    features = ["sparkfun-promini-5v"]


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
